<resources>
    <string name="app_name">Overchan</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="previous">previous</string>
    <string name="next">next</string>
    <string name="error">Error</string>
    <string name="close">Close</string>
    <string name="captcha">Captcha</string>
    <string name="mark_quote">Quote</string>
    <string name="mark_bold">Bold</string>
    <string name="mark_italic">Italic</string>
    <string name="mark_underline">Underline</string>
    <string name="mark_strike">Strikethrough</string>
    <string name="mark_spoiler">Spoiler</string>
    <string name="catalog_default">Catalog</string>
    <string name="postitem_contentdescription_thumbnail_image">Thumbnail</string>
    <string name="postitem_contentdescription_badge_icon">Icon</string>
    <string name="postitem_op_mark">#OP</string>
    <string name="postitem_sage_mark">SAGE</string>
    <string name="postitem_attachment_size_kb_format">%d KB</string>
    <string name="postitem_attachment_size_mb_format">%.1f MB</string>
    <string name="postitem_show_full_text"><u>Show the full text</u></string>
    <string name="postitem_gif">gif</string>
    <string name="postitem_video">video</string>
    <string name="postitem_audio">audio</string>
    <string name="postitem_file">file</string>
    <string name="postitem_link">link</string>
    <string name="postitem_replies">Replies: </string>
    <string name="postitem_hidden_thread">Hidden thread #%1$s: %2$s</string>
    <string name="postitem_hidden_post">Hidden post #%1$s: %2$s</string>
    <string name="postitem_post_number_search_header">%1$s (thread %2$s)</string>
    <string name="postitem_sticky_thread">Thread is sticky</string>
    <string name="postitem_closed_thread">Thread is closed</string>
    <string name="postitem_cyclical_thread">Cyclical thread</string>
    <string name="postitem_deleted_mark">Post is deleted</string>
    <plurals name="postitem_posts_quantity">
        <item quantity="one">%d post</item>
        <item quantity="other">%d posts</item>
    </plurals>
    <plurals name="postitem_files_quantity">
        <item quantity="one">%d file</item>
        <item quantity="other">%d files</item>
    </plurals>
    <plurals name="postitem_replies_quantity">
        <item quantity="one">%d reply</item>
        <item quantity="other">%d replies</item>
    </plurals>
    <string name="postslist_list_updated">Updated</string>
    <string name="postslist_no_new_posts">No new posts</string>
    <plurals name="postslist_new_posts_quantity">
        <item quantity="one">%d new post</item>
        <item quantity="other">%d new posts</item>
    </plurals>
    <string name="attachment_info_size_format">Size: %s</string>
    <string name="attachment_info_resolution_format">Resolution: %1$dx%2$d</string>
    <string name="attachment_info_original_name_format">Original name: %s</string>
    <string name="tabs_newtab">New Tab</string>
    <string name="tabs_favorites">Favorites</string>
    <string name="tabs_history">History</string>
    <string name="tabs_tracker_title">Auto Update</string>
    <string name="tabs_tracker_title_unread">New Posts</string>
    <string name="tabs_tracker_updating">Updating now</string>
    <plurals name="tabs_tracker_timer">
        <item quantity="one">Update in %d second</item>
        <item quantity="other">Update in %d seconds</item>
    </plurals>
    <string name="tabs_title_boardpage">/%1$s - Page %2$d</string>
    <string name="tabs_title_boardpage_first">/%1$s</string>
    <string name="tabs_title_catalogpage">/%s - Catalog</string>
    <string name="tabs_title_searchpage">/%1$s - search: %2$s</string>
    <string name="tabs_title_threadpage">/%1$s/%2$s</string>
    <string name="tabs_title_threadpage_loaded">/%1$s - %2$s</string>
    <string name="newtab_address_bar">Address</string>
    <string name="newtab_saved_threads">Saved</string>
    <string name="newtab_address_go">GO</string>
    <string name="newtab_address_hint">http://</string>
    <string name="newtab_saved_threads_title">Saved threads</string>
    <string name="newtab_select_local_file">Specify file location</string>
    <string name="newtab_quickaccess_all_boards">All Imageboards</string>
    <string name="newtab_quickaccess_addcustom_title">Add the board from %s</string>
    <string name="newtab_quickaccess_addcustom_boardcode">Board code</string>
    <string name="newtab_quickaccess_addcustom_boarddesc">Description</string>
    <string name="newtab_quickaccess_addcustom_incorrect_code">Incorrect board code</string>
    <string name="newtab_quickaccess_addcustom_already_exists">This board is already in the list</string>
    <string name="history_empty">No history</string>
    <string name="history_today">Today</string>
    <string name="history_yesterday">Yesterday</string>
    <string name="history_last_week">Last week</string>
    <string name="history_other">Earlier</string>
    <string name="history_last_closed">Last closed tab</string>
    <string name="favorites_empty">No bookmarks</string>
    <string name="favorites_all">All bookmarks</string>
    <string name="favorites_chans">Imageboards</string>
    <string name="favorites_boards">Boards</string>
    <string name="favorites_threads">Threads</string>
    <string name="boardslist_format">/%1$s - %2$s</string>
    <string name="boardslist_hint">Board code</string>
    <string name="boardslist_btn_go">GO</string>
    <string name="boardslist_favorite_boards">Favorites</string>
    <string name="boardslist_quickaccess_tip">You can add imageboards to the Quick access (open the menu)</string>
    <string name="search_bar_hint">Search</string>
    <string name="search_bar_in_thread_hint">Search in thread</string>
    <string name="menu_open_drawer">Open drawer</string>
    <string name="menu_close_drawer">Close drawer</string>
    <string name="menu_preferences">Preferences</string>
    <string name="menu_sub_preferences_suspend">Suspend</string>
    <string name="menu_sub_preferences_autoupdate">Auto-Update</string>
    <string name="menu_sub_preferences_maskpictures">SFW mode</string>
    <string name="menu_sub_preferences_all">All preferences</string>
    <string name="menu_add_post">Post a Reply</string>
    <string name="menu_add_thread">New thread</string>
    <string name="menu_update">Update</string>
    <string name="menu_from_internet">From Internet</string>
    <string name="menu_catalog">Catalog</string>
    <string name="menu_search">Search</string>
    <string name="menu_open_browser">Open browser</string>
    <string name="menu_add_favorites">Add to favorites</string>
    <string name="menu_remove_favorites">Remove from favorites</string>
    <string name="menu_attach_file">Attach file</string>
    <string name="menu_attach_gallery">Gallery</string>
    <string name="menu_save_page">Save</string>
    <string name="menu_board_gallery">Gallery</string>
    <string name="menu_clear_history">Clear history</string>
    <string name="menu_clear_favorites">Remove all bookmarks</string>
    <string name="menu_save_attachment">Save</string>
    <string name="menu_share">Share</string>
    <string name="menu_share_link">Share link</string>
    <string name="menu_reverse_search">Image search</string>
    <string name="menu_open">Open</string>
    <string name="menu_open_player">Open external player</string>
    <string name="menu_quickaccess_add">Add to Quick Access</string>
    <string name="context_menu_move">Move</string>
    <string name="context_menu_copy_url">Copy the link</string>
    <string name="context_menu_add_favorites">Add to favorites</string>
    <string name="context_menu_remove_favorites">Remove from favorites</string>
    <string name="context_menu_remove_history">Remove from history</string>
    <string name="context_menu_open_browser">Open browser</string>
    <string name="context_menu_autoupdate_background">Auto-update</string>
    <string name="context_menu_autoupdate_background_off">Auto-update (off)</string>
    <string name="context_menu_autoupdate_now">Run auto-update</string>
    <string name="context_menu_open_in_new_tab">Open in new tab</string>
    <string name="context_menu_thread_preview">Thread preview</string>
    <string name="context_menu_reply">Reply to this post</string>
    <string name="context_menu_reply_with_quote">Reply with quote</string>
    <string name="context_menu_reply_no_reading">Reply without reading</string>
    <string name="context_menu_show_thumbnail">Show thumbnail</string>
    <string name="context_menu_attachment_info">Show information</string>
    <string name="context_menu_download_file">Download file</string>
    <string name="context_menu_select_text">Select text</string>
    <string name="context_menu_copy_text">Copy text</string>
    <string name="context_menu_hide_thread">Hide thread</string>
    <string name="context_menu_hide_post">Hide post</string>
    <string name="context_menu_delete">Delete</string>
    <string name="context_menu_report">Report abuse</string>
    <string name="context_menu_subscribe">Subscribe</string>
    <string name="context_menu_unsubscribe">Unsubscribe</string>
    <string name="context_menu_share">Share</string>
    <string name="context_menu_share_link">Share link</string>
    <string name="context_menu_reverse_search">Image search</string>
    <string name="context_menu_delete_autohide_rule">Remove the rule</string>
    <string name="context_menu_quickaccess_add">Add to Quick Access</string>
    <string name="context_menu_quickaccess_remove">Remove from Quick Access</string>
    <string name="context_menu_quickaccess_custom_board">Add custom board</string>
    <string name="context_menu_save_captcha">Save captcha</string>
    <string name="share_via">Share via</string>
    <string name="share_no_tabs">No open tabs</string>
    <string name="dialog_delete_password">Password for deletion</string>
    <string name="dialog_delete_only_files">Only files</string>
    <string name="dialog_delete_button">Delete</string>
    <string name="dialog_delete_progress">Deleting</string>
    <string name="dialog_report_reason">Reason for reporting</string>
    <string name="dialog_report_button">Report</string>
    <string name="dialog_report_progress">Wait</string>
    <string name="dialog_captcha_check">Check</string>
    <string name="dialog_external_url_title">Going external</string>
    <string name="dialog_external_url_text">%s\n\nThis page will be opened by an external application.
        Keep in mind that the site may contain malware, dangerous for your device.\n\nAre you sure you want to proceed?</string>
    <string name="postform_name">Name</string>
    <string name="postform_email">Email</string>
    <string name="postform_password">Password for deletion:</string>
    <string name="postform_subject">Subject</string>
    <string name="postform_comment">Comment</string>
    <string name="postform_sage">Sage</string>
    <string name="postform_opmark">OP of thread</string>
    <string name="postform_captcha_hint">Confirmation</string>
    <string name="postform_send">Send</string>
    <string name="filedialog_new">New</string>
    <string name="filedialog_select">Select</string>
    <string name="filedialog_filename">File name:</string>
    <string name="filedialog_filename_hint">file name</string>
    <string name="filedialog_cancel">Cancel</string>
    <string name="filedialog_create">Save</string>
    <string name="filedialog_no_data">No Data</string>
    <string name="autohide_regex_hint">Regular expression</string>
    <string name="autohide_board_hint">Board</string>
    <string name="autohide_thread_hint">Thread</string>
    <string name="autohide_in_comment">Search in messages</string>
    <string name="autohide_in_subject">Search in subjects</string>
    <string name="autohide_in_name">Search in names and tripcodes</string>
    <string name="mark_code">Code</string>
</resources>