<?xml version="1.0" encoding="utf-8"?>
<!--  
Overchan Android (Meta Imageboard Client)
Copyright (C) 2014-2015  miku-nyan <https://github.com/miku-nyan>

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    <ImageView
        android:id="@+id/post_thumbnail_image"
        android:layout_width="@dimen/post_thumbnail_size"
        android:layout_height="@dimen/post_thumbnail_size"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:scaleType="centerInside"
        android:contentDescription="@string/postitem_contentdescription_thumbnail_image"
        android:visibility="visible" />

    <TextView
        android:id="@+id/post_thumbnail_attachment_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:maxWidth="@dimen/post_thumbnail_size"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="?attr/itemInfoForeground"
        android:singleLine="true"
        android:maxLines="1" 
        android:ellipsize="end"
        android:visibility="visible"
        android:text="@string/postitem_attachment_size_kb_format" />
    
     <TextView
        android:id="@+id/post_thumbnail_attachment_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:maxWidth="@dimen/post_thumbnail_size"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="?attr/itemInfoForeground"
        android:singleLine="true"
        android:maxLines="1" 
        android:ellipsize="end"
        android:visibility="gone"
        android:text="@string/postitem_file" />
</LinearLayout>