<?xml version="1.0" encoding="utf-8"?>
<!--  
Overchan Android (Meta Imageboard Client)
Copyright (C) 2014-2016  miku-nyan <https://github.com/miku-nyan>

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/sidebarBackground"
    tools:ignore="Overdraw" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/tab_height" 
        android:orientation="horizontal"
        android:weightSum="3" >
        <ImageView
            style="@style/SelectableItem"
            android:id="@+id/sidebar_btn_newtab"
            android:layout_height="match_parent" 
            android:layout_width="0dp"
            android:layout_weight="1"
            android:src="?attr/sidebarBtnNewTab"
            android:contentDescription="@string/tabs_newtab" />
        <ImageView
            style="@style/SelectableItem"
            android:id="@+id/sidebar_btn_history"
            android:layout_height="match_parent" 
            android:layout_width="0dp"
            android:layout_weight="1"
            android:src="?attr/sidebarBtnHistory"
            android:contentDescription="@string/tabs_history" />
        <ImageView
            style="@style/SelectableItem"
            android:id="@+id/sidebar_btn_favorites"
            android:layout_height="match_parent" 
            android:layout_width="0dp"
            android:layout_weight="1"
            android:src="?attr/sidebarBtnFavorites"
            android:contentDescription="@string/tabs_favorites" />
    </LinearLayout>
    
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/listDivider"
        android:contentDescription="@string/empty" />
    
    <nya.miku.wishmaster.lib.dslv.DragSortListView
        android:id="@+id/sidebar_tabs_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
